@@ -1,3 +1,9 @@
+2006-05-01  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* os/WaitFor.c:
+	Use min() [defined in include/misc.h] instead of MIN() [not defined in
+	any Xorg header].
+
 2006-04-30  Adam Jackson  <ajax@freedesktop.org>
 
 	* Xprint/pcl/PclGC.c:
